--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
+  },
+  "dependencies": {
+    "three": "^0.145.0"
   }
 }
