basic 3d scene setup

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
-    "three": "^0.145.0"
+    "three": "^0.145.0",
+    "three-orbitcontrols": "^2.110.3"
   }
 }
